env_config/tests/ui/union.stderr
error: cannot be derived for unions
 --> tests/ui/union.rs:4:7
  |
4 | union MyLovelyUnion {
  |       ^^^^^^^^^^^^^
